[gd_scene load_steps=12 format=3 uid="uid://b7gpfbx0s2ywy"]

[ext_resource type="Script" path="res://Scripts/ScriptGenerales/gameOver.gd" id="1_jyfv4"]
[ext_resource type="FontFile" uid="uid://b4giw5b8c2ag0" path="res://Assets/Fonts/Pixeled.ttf" id="2_efxy6"]
[ext_resource type="Texture2D" uid="uid://c8oyw36wdjhc" path="res://Assets/Menus/UI Package/Elements/4-2.png" id="3_wkw1d"]
[ext_resource type="Texture2D" uid="uid://c43f27w0ut8a6" path="res://Assets/Menus/UI Package/Elements/4-3.png" id="4_etnnv"]
[ext_resource type="Texture2D" uid="uid://dyfon2ge4fy1m" path="res://Assets/Menus/UI Package/Elements/4-1.png" id="5_yd3c2"]
[ext_resource type="AudioStream" uid="uid://blbivdegy7x36" path="res://Assets/Sounds and Music/multi-pop-1-188165.mp3" id="6_5bxd4"]
[ext_resource type="AudioStream" uid="uid://gqw2fsrgxf5m" path="res://Assets/Sounds and Music/confirm-38513.mp3" id="7_3w1w6"]

[sub_resource type="Animation" id="Animation_dc8ys"]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vpudj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_x0k5p"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_otc2v"]
_data = {
"FadeIn": SubResource("Animation_dc8ys"),
"FadeOut": SubResource("Animation_x0k5p"),
"RESET": SubResource("Animation_vpudj")
}

[node name="GameOver" type="Node2D"]
script = ExtResource("1_jyfv4")

[node name="Node" type="Node2D" parent="."]
modulate = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Node"]
offset_left = -16.0
offset_top = -41.0
offset_right = 1944.0
offset_bottom = 1105.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Node/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 343.004
offset_top = 361.25
offset_right = 1135.0
offset_bottom = 641.25
theme_override_fonts/font = ExtResource("2_efxy6")
theme_override_font_sizes/font_size = 90
text = "GAME OVER"

[node name="Menu" type="Control" parent="Node/ColorRect"]
layout_mode = 3
anchors_preset = 0
offset_left = -61.0
offset_top = 241.0
offset_right = -21.0
offset_bottom = 281.0

[node name="Menu" type="TextureButton" parent="Node/ColorRect/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = 732.999
offset_top = 321.999
offset_right = 772.999
offset_bottom = 361.999
scale = Vector2(2, 2)
texture_normal = ExtResource("3_wkw1d")
texture_pressed = ExtResource("4_etnnv")
texture_hover = ExtResource("5_yd3c2")

[node name="Label" type="Label" parent="Node/ColorRect/Menu/Menu"]
offset_left = 14.0005
offset_top = -4.99951
offset_right = 127.0
offset_bottom = 72.0005
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_efxy6")
theme_override_font_sizes/font_size = 27
text = "Menu"
uppercase = true

[node name="Retry" type="Control" parent="Node/ColorRect"]
layout_mode = 3
anchors_preset = 0
offset_left = 309.0
offset_top = 241.0
offset_right = 349.0
offset_bottom = 281.0

[node name="Retry" type="TextureButton" parent="Node/ColorRect/Retry"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = 732.999
offset_top = 321.999
offset_right = 772.999
offset_bottom = 361.999
scale = Vector2(2, 2)
texture_normal = ExtResource("3_wkw1d")
texture_pressed = ExtResource("4_etnnv")
texture_hover = ExtResource("5_yd3c2")

[node name="Label" type="Label" parent="Node/ColorRect/Retry/Retry"]
offset_left = 11.0005
offset_top = -2.49951
offset_right = 156.0
offset_bottom = 74.5005
scale = Vector2(0.45, 0.45)
theme_override_fonts/font = ExtResource("2_efxy6")
theme_override_font_sizes/font_size = 27
text = "Retry
"
uppercase = true

[node name="SFXButtons" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5bxd4")
max_polyphony = 5
bus = &"SFX"

[node name="StartGame" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3w1w6")
volume_db = 15.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_priority = 1
libraries = {
"": SubResource("AnimationLibrary_otc2v")
}

[connection signal="mouse_entered" from="Node/ColorRect/Menu/Menu" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node/ColorRect/Menu/Menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Node/ColorRect/Retry/Retry" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node/ColorRect/Retry/Retry" to="." method="_on_retry_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
